# scoop-rs

./: .gitignore  AGENTS.md  BEHAVIOR_DELTAS.md  COMPARISION.md  Cargo.toml  FUTURE_PLAN.md  LICENSE  README.md  THINGS_TO_ADDRESS.md  WORKING_MEMORY.md
benchmarks/: README.md  install-fixture-prepare.ps1  prepare-search-cache-cold-build.ps1  prepare-search-cache-rebuild.ps1  uninstall-fixture-prepare.ps1  update-fixture-prepare.ps1
crates/scoop-cli/: Cargo.toml
crates/scoop-cli/src/: color.rs  main.rs  registry.rs
crates/scoop-cli/tests/: README.md  cli.rs
crates/scoop-core/: Cargo.toml
crates/scoop-core/src/: lib.rs
crates/scoop-core/src/app/: bucket.rs  cache.rs  cat.rs  cleanup.rs  config.rs  depends.rs  download.rs  export.rs  hold.rs  import.rs  info.rs  install.rs  list.rs  mod.rs  reset.rs  resolve.rs  search.rs  shim.rs  status.rs  uninstall.rs  update.rs  virustotal.rs
crates/scoop-core/src/compat/: catalog.rs
crates/scoop-core/src/domain/: install_context.rs  manifest.rs  mod.rs  paths.rs  version.rs
crates/scoop-core/src/infra/: buckets.rs  cache.rs  config.rs  environment.rs  git.rs  hash.rs  http.rs  installed.rs  mod.rs  powershell.rs  profiling.rs  shortcuts.rs  sqlite_cache.rs  versioned_manifest.rs
crates/scoop-core/src/infra/windows/: env.rs  mod.rs  security.rs  shortcut.rs
docs/: bootstrap-updater.md  install-prep.md
scripts/: benchmark-command.ps1  benchmark-compare.ps1  benchmark-install-fixture.ps1  benchmark-search-cache.ps1  benchmark-suite.ps1  benchmark-uninstall-fixture.ps1  benchmark-update-fixture.ps1  root-helpers.ps1
