[package]
name = "scoop-cli"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
jiff.workspace = true
owo-colors.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

scoop-core = { path = "../scoop-core" }

[dev-dependencies]
camino.workspace = true
regex.workspace = true
serde_json.workspace = true
tempfile.workspace = true
zip.workspace = true

[[bin]]
name = "scoop"
path = "src/main.rs"

[lints]
workspace = true
